deployments/without-creds/cadet/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cadet-deployment
  labels:
    app: cadet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cadet
  template:
    metadata:
      labels:
        app: cadet
    spec:
      containers:
      - name: cadet
        image: gcr.io/cf-concourse-production/cadet:47
        ports:
        - containerPort: 8000
