deployments/without-creds/cadet/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cadet
spec:
  type: NodePort
  selector:
    app: cadet
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
